[package]
name = "benchmark_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gxhash = "3.5.0"
ndarray = "0.16.1"
petgraph = "0.8.1"
polars = { version = "0.47.1", features = ["lazy", "csv", "dtype-full"] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

